crates/usfm_parser/tests/snapshots/malformed__unknown_marker.snap
---
source: crates/usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p \\v 2 \\zzz custom \\zzz* after\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..45
  VerseStart 2@16..20
  Text "custom after"@26..45
  VerseEnd 2
ChapterEnd 1
--- diagnostics
warning[unknown-custom-marker] @21..25: custom marker `\zzz` is not in the stylesheet; dropped
warning[unknown-custom-marker] @33..38: custom marker `\zzz*` is not in the stylesheet; dropped
