crates/usfm_parser/tests/snapshots/malformed__verse_huge.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p \\v 999999999999999999999 huge\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..46
  Text "huge"@41..46
ChapterEnd 1
--- diagnostics
error[malformed-verse-number] @19..40: `999999999999999999999` is not a valid verse number
