crates/usfm_parser/tests/snapshots/malformed__verse_reversed_range.snap
---
source: usfm_parser/tests/snapshot.rs
description: "\\id GEN\n\\c 1\n\\p \\v 2-1 reversed range\n"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..38
  VerseStart 2-1@16..22
  Text "reversed range"@23..38
  VerseEnd 2-1
ChapterEnd 1
